optimized GUI components

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/HireCar
 excludes=
+file.reference.sqlite-jdbc-3.6.17.3.jar=D:\\Software\\Java Libraries\\sqlite-jdbc-3.6.17.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlite-jdbc-3.6.17.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +77,7 @@ main.class=com.walezy.hirecar.HireCar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_12
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
