--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -77,7 +77,7 @@ main.class=com.walezy.hirecar.HireCar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_12
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
