--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/HireCar
 excludes=
+file.reference.Downloads-hirecar_sql=..\\..\\Downloads\\hirecar sql
+file.reference.mysql-connector-java-8.0.23.jar=..\\..\\Documents\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
 file.reference.sqlite-jdbc-3.6.17.3.jar=D:\\Software\\Java Libraries\\sqlite-jdbc-3.6.17.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.6.17.3.jar}
+    ${file.reference.sqlite-jdbc-3.6.17.3.jar}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.Downloads-hirecar_sql}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
