Wrote add car module

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
+file.reference.Downloads-hirecar_sql=C:\\Users\\Ashpot\\Documents\\NetBeansProjects\\hirecar\\libraries\\hirecar.sql
 file.reference.sqlite-jdbc-3.6.17.3.jar=C:\\Users\\hp\\Desktop\\hirecar
 user.properties.file=C:\\Users\\Ashpot\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
