--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,14 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/HireCar
 excludes=
 file.reference.Downloads-hirecar_sql=..\\..\\Downloads\\hirecar sql
-file.reference.mysql-connector-java-8.0.23.jar=..\\..\\Documents\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
+file.reference.libraries-db_schema=libraries\\db schema
+file.reference.mysql-connector-java-8.0.23.jar=libraries\\mysql-connector-java-8.0.23.jar
 file.reference.sqlite-jdbc-3.6.17.3.jar=D:\\Software\\Java Libraries\\sqlite-jdbc-3.6.17.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.6.17.3.jar}:\
+    ${file.reference.Downloads-hirecar_sql}:\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
-    ${file.reference.Downloads-hirecar_sql}
+    ${file.reference.libraries-db_schema}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,7 +83,7 @@ main.class=com.walezy.hirecar.HireCar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_12
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
